@@ -443,4 +443,4 @@ For example with lighttpd:
 Please refer to the project site http://iipimage.sourceforge.net for further details
 
 ------------------------------------------------------------------------------------
-(c) 2000-2015 Ruven Pillay <ruven@users.sourceforge.net>
+(c) 2000-2016 Ruven Pillay <ruven@users.sourceforge.net>
