@@ -1,5 +1,6 @@
 12/01/2016:
 	- Added check to JPEGCompressor to reject images that are not 8 bits per channel
+	- Added new floatProcessing() function to View.h to simplify code in JTL and CVT
 
 
 06/01/2016:
